Remove legacy icon copying scripts and update project dependencies
- Deleted `copy-icon.bat` and `copy-icon.sh` scripts as they are no longer needed.
- Removed the `maki2.png` image file from the project.
- Updated `package.json` to include `bcryptjs` as a new dependency and added its type definitions for TypeScript support.
- Enhanced the README to reflect the project's purpose and features more clearly, improving user guidance.
- Updated the manifest file to change the project name and description for better clarity.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Ruutulian - Original Character Wiki",
-  "short_name": "Ruutulian",
-  "description": "Ruu's personal OC wiki! A place to store and organize information on her original characters, worlds, lore, and timelines across every universe.",
+  "name": "OC Wiki - Original Character Wiki",
+  "short_name": "OC Wiki",
+  "description": "A place to store and organize information on original characters, worlds, lore, and timelines across every universe.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#111827",
