--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "recharts": "^2.12.0",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/bcryptjs": "^2.4.6",
     "autoprefixer": "^10.0.1",
     "eslint": "^9",
     "eslint-config-next": "^16.0.10",
