Add altIconUrl support and update README for site configuration
- Introduced altIconUrl field in site settings to allow for an alternative icon URL.
- Updated SiteSettingsForm component to include input for altIconUrl.
- Enhanced the README with detailed instructions on setting up site-config.json and clarified that user settings are protected during updates.
- Added site-config.json to .gitignore to prevent user-specific settings from being tracked.

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@ yarn-error.log*
 .env*.local
 .env
 
+# user configuration files (these contain user-specific settings)
+site-config.json
+
 # vercel
 .vercel
 
