--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,7 +6,7 @@
   "display": "standalone",
   "icons": [
     {
-      "src": "/icon.png",
+      "src": "/images/logo.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
