Enhance nixpacks.toml configuration for improved build setup
- Added setup phase to create a temporary cache directory for Next.js builds.
- Updated install phase to handle cache cleanup and retry npm installation if it fails.
- Introduced new variables for npm cache location and Node.js memory limits to optimize performance during builds.

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,12 +1,22 @@
+[phases.setup]
+cmds = [
+  "mkdir -p /tmp/.next-cache",
+]
+
 [phases.install]
 cmds = [
-  "npm ci --production=false",
+  "npm ci --production=false || (rm -rf node_modules/.cache && npm ci --production=false)",
 ]
 
 [phases.build]
 cmds = [
   "npm run build",
 ]
+
+[variables]
+NPM_CONFIG_CACHE = "/tmp/.npm"
+NODE_OPTIONS = "--max-old-space-size=4096"
+NEXT_TELEMETRY_DISABLED = "1"
 
 [start]
 cmd = "npm start"
